[package]
name = "datalogts"
version = "0.1.0"
edition = "2021"
auhtor = "auhiewuil@gmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = "2"
lazy_static = "1"
crossbeam-channel = "0.5"
urlencoding = "2.1"
urlparse = "0"